tests/agl/rejections/type/cast_function.agl
def f(x: int) -> int = x
let t = f as text
t
